--- a/src/main/webapp/app/components/login/login.html
+++ b/src/main/webapp/app/components/login/login.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group">
                     <label for="rememberMe">
-                        <input type="checkbox" id="rememberMe" ng-model="vm.rememberMe" checked>
+                        <input type="checkbox" class="checkbox-control" id="rememberMe" ng-model="vm.rememberMe" checked>
                         <span>Remember me</span>
                     </label>
                 </div>
